--- a/Selenium/test-output/emailable-report.html
+++ b/Selenium/test-output/emailable-report.html
@@ -8,15 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">37,663</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">91</td><td>red</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.testng.TestngDepends</td><td><a href="#m0">after</a></td><td rowspan="1">1724214255680</td><td rowspan="1">3286</td></tr><tr class="passedeven"><td><a href="#m1">before</a></td><td rowspan="1">1724214221373</td><td rowspan="1">26888</td></tr><tr class="passedeven"><td><a href="#m2">clickLogin</a></td><td rowspan="1">1724214253036</td><td rowspan="1">2641</td></tr><tr class="passedeven"><td><a href="#m3">enterLogin</a></td><td rowspan="1">1724214248324</td><td rowspan="1">2543</td></tr><tr class="passedeven"><td><a href="#m4">enterPassword</a></td><td rowspan="1">1724214250868</td><td rowspan="1">2166</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.testng.TestngGroups</td><td><a href="#m0">greenandred</a></td><td rowspan="1">1724928123373</td><td rowspan="1">16</td></tr><tr class="passedeven"><td><a href="#m1">red1</a></td><td rowspan="1">1724928123396</td><td rowspan="1">4</td></tr><tr class="passedeven"><td><a href="#m2">red2</a></td><td rowspan="1">1724928123402</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m3">red3</a></td><td rowspan="1">1724928123407</td><td rowspan="1">2</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.testng.TestngDepends#after</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.testng.TestngDepends#before</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.testng.TestngDepends#clickLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.testng.TestngDepends#enterLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.testng.TestngDepends#enterPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.testng.TestngGroups#greenandred</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.testng.TestngGroups#red1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.testng.TestngGroups#red2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.testng.TestngGroups#red3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
